<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <EditText
            android:id="@+id/add_et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_title_hint"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <EditText
            android:id="@+id/add_et_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/et_date_hint"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_et_title"
            android:onClick="onDateClick"/>

        <EditText
            android:id="@+id/add_et_time_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/et_start_hint"
            android:inputType="time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_et_date"
            android:onClick="onStartTimeClick"/>

        <EditText
            android:id="@+id/add_et_time_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/et_end_hint"
            android:inputType="time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_et_time_start"
            android:onClick="onEndTimeClick"/>

        <EditText
            android:id="@+id/add_et_participants"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/et_participant_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toStartOf="@+id/button_add_participant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_et_time_end" />

        <Button
            android:id="@+id/button_add_participant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/text_button_add_participant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/add_et_participants"
            android:onClick="onAddParticipantButtonClick"/>

        <LinearLayout
            android:id="@+id/layout_participants"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/room_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_et_participants">

        </LinearLayout>

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_button_clear"
            app:layout_constraintBottom_toBottomOf="@+id/confirm_meeting_button"
            app:layout_constraintEnd_toStartOf="@+id/confirm_meeting_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/confirm_meeting_button"
            android:onClick="onClearButtonClick"/>

        <Spinner
            android:id="@+id/room_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/clear_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/confirm_meeting_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/text_button_confirm"
            android:onClick="onConfirmButtonClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/clear_button" />


</androidx.constraintlayout.widget.ConstraintLayout>