<resources>
    <string name="app_name">Ma réu</string>
    <string name="dialog_room_title">Choisir une salle</string>
    <string name="et_title_hint">Intitulé de la réunion</string>
    <string name="et_date_hint">Date de la réunion</string>
    <string name="et_start_hint">Heure de début</string>
    <string name="et_end_hint">Heure de fin</string>
    <string name="et_participant_hint">Adresse mail du collaborateur</string>
    <string name="text_button_add_participant">Ajouter</string>
    <string name="text_button_clear">Effacer</string>
    <string name="text_button_confirm">Terminer</string>
    <string name="toast_empty_participant">Impossible d\'ajouter un nouveau participant : le champ est vide.</string>
    <string name="toast_fields_not_filled">Tous les champs ne sont pas correctement remplis.</string>
    <string name="filterbydate">Filtrer par date</string>
    <string name="filterbyroom">Filtrer par salle</string>
    <string name="nofilter">Toutes les réunions</string>

    <string name="contentDesc_fab">Ajout d\'une réunion </string>
    <string name="contentDesc_delete_button">Bouton de suppression</string>
    <string name="contentDesc_avatar">colored image</string>
</resources>