...
            android:layout_marginStart="@dimen/avatar_margin"
            android:layout_marginTop="@dimen/meeting_fragment_margin"
            android:layout_marginEnd="@dimen/meeting_fragment_margin"
            android:layout_marginBottom="@dimen/meeting_fragment_margin"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/delete_meeting_imageButton"
            app:layout_constraintStart_toEndOf="@id/imageView_meetingRecyclerViewAvatar"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView_cardView_title"
                android:layout_width="wrap_content"
...
